--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,7 @@
 <body>
 <div id="app" class="container-fluid">
     <div id="pannel" class="bg-light sidebar"></div>
-    <div id="site" class="content">
-
-    
-        
-    </div>
+    <div id="site" class="content"></div>
 </div>
 <script type="module" src="index.js"></script>
 </body>
